  bottom probabilities are now adjusted to the number of messages used for
  building the database.
* When the junk mail database is updated, it is now truncated beyond the
  last byte just written. Previously, stale data could have remained after
  this point, which was no problem for nail itself, but could make zcat(1)
  fail on the file.
* To take advantage of the changes to the junk mail recognition method,
  you have to delete your junk mail database and have to create it again.
* The new 'probability' command prints the junk statistics for given words.
* The 'answered', 'classify, 'draft', 'flag', 'good', 'junk', 'undraft',
  'unflag', and 'unkill' command now make their argument the current
  message. This is now also done by the 'score' command unless the new
  score of the message is negative.
* Very old versions of OpenSSL are now detected by the configuration script.
  OpenSSL code will not be included if the version is too old (Bugreport by
  Thomas Voegtle).

[11.12] released 10/21/04
* Blank characters between MIME encoded words in header fields are now
  discarded for display purposes as demanded by RFC 2047.
* Unless the 'fullnames' variable was set, nail did not generate 'To' header
  fields when replying to messages since version 11.5 (Bugreport by Bob
  Tennent).
* An internal problem in the token scanning for junk mail detection has been
  fixed; the end of the mail header was not always correctly determined.
* Special characters in IMAP or POP3 account strings like 'imap://user@host'
  can now be escaped using URL notation, e.g. 'foo%2Fbar' for 'foo/bar'. It
  was previously not possible to use these characters. This is a slightly
  incompatible change as the '%' character must now also be escaped, as
  '%25'. (Bugreport by Thomas Wolff.)
* The system mailbox is now locked using fcntl(2) for reading too (Problem
  reported by Thomas Wolff).
* When new mail arrives in an IMAP mailbox, the current message is now